python3-cyberfusion-queue-support (2.8) unstable; urgency=medium

  * Add status to queue processes

 -- William Edwards <wedwards@cyberfusion.nl>  Thu, 28 Aug 2025 11:56:00 +0000

python3-cyberfusion-queue-support (2.7.1) unstable; urgency=medium

  * DatabaseUserEnsureStateItem: make `password` attribute private

 -- Mika Scheer <wedwards@cyberfusion.nl>  Tue, 26 Aug 2025 13:25:00 +0000

python3-cyberfusion-queue-support (2.7) unstable; urgency=medium

  * Add JSON encoding for all queue items and outcomes

 -- William Edwards <wedwards@cyberfusion.nl>  Mon, 25 Aug 2025 11:57:00 +0000

python3-cyberfusion-queue-support (2.6.4) unstable; urgency=medium

  * Database: add reverse relationships

 -- William Edwards <wedwards@cyberfusion.nl>  Sun, 20 Jul 2025 18:09:00 +0000

python3-cyberfusion-queue-support (2.6.3) unstable; urgency=medium

  * Set multiple items to deduplicated
  * Fix static `created_at`
  * Commit queue items and outcomes once

 -- William Edwards <wedwards@cyberfusion.nl>  Sun, 06 Jul 2025 01:15:00 +0000

python3-cyberfusion-queue-support (2.6.2) unstable; urgency=medium

  * Use compat level 14

 -- William Edwards <wedwards@cyberfusion.nl>  Sun, 29 Jun 2025 14:40:29 +0000

python3-cyberfusion-queue-support (2.6.1) unstable; urgency=low

  - Allow group to read and write to database

 -- William Edwards <wedwards@cyberfusion.nl>  Wed, 25 Jun 2025 20:50:00 +0200

python3-cyberfusion-queue-support (2.6.0) unstable; urgency=low

  - Let database user grant items accept table_name instead of table

 -- Mika Scheer <mscheer@cyberfusion.io>  Sun, 15 Jun 2025 18:52:00 +0200

python3-cyberfusion-queue-support (2.5.2) unstable; urgency=low

  - Make config file readable (0600 -> 0644)

 -- William Edwards <wedwards@cyberfusion.nl>  Sun, 15 Jun 2025 11:51:00 +0200

python3-cyberfusion-queue-support (2.5.1) unstable; urgency=low

  - Serialize `sentinels.UNKNOWN`

 -- William Edwards <wedwards@cyberfusion.nl>  Sat, 07 Jun 2025 15:59:00 +0200
