@@ -4,3 +4,4 @@ import enum
 class QueueProcessStatus(enum.StrEnum):
     SUCCESS = "success"
     FATAL = "fatal"
+    WARNING = "warning"
