@@ -22,12 +22,14 @@ class ChmodItem(_Item):
         mode: int,
         reference: Optional[str] = None,
         hide_outcomes: bool = False,
+        fail_silently: bool = False,
     ) -> None:
         """Set attributes."""
         self.path = path
         self.mode = mode
         self._reference = reference
         self._hide_outcomes = hide_outcomes
+        self._fail_silently = fail_silently
 
         if os.path.islink(self.path):
             raise PathIsSymlinkError(self.path)
