@@ -20,11 +20,13 @@ class CommandItem(_Item):
         command: List[str],
         reference: Optional[str] = None,
         hide_outcomes: bool = False,
+        fail_silently: bool = False,
     ) -> None:
         """Set attributes."""
         self.command = command
         self._reference = reference
         self._hide_outcomes = hide_outcomes
+        self._fail_silently = fail_silently
 
     @property
     def outcomes(self) -> List[CommandItemRunOutcome]:
