@@ -21,10 +21,12 @@ class SystemdDaemonReloadItem(_Item):
         *,
         reference: Optional[str] = None,
         hide_outcomes: bool = False,
+        fail_silently: bool = False,
     ) -> None:
         """Set attributes."""
         self._reference = reference
         self._hide_outcomes = hide_outcomes
+        self._fail_silently = fail_silently
 
     @property
     def outcomes(self) -> List[SystemdDaemonReloadItemReloadOutcome]:
